<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>j7s-mqtt</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jpace121@gmail.com">James Pace</maintainer>
  <license>Apache 2.0</license>

  <depend>blinkt_py</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
